# vsampler

./: .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/corpus_editor/: CMakeLists.txt  main.cpp
apps/corpus_editor/domain/: CMakeLists.txt
apps/corpus_editor/gui/: CMakeLists.txt
apps/corpus_editor/main/: CMakeLists.txt
apps/corpus_editor/main/controller/: CorpusEditorController.cpp  CorpusEditorController.h  CorpusInfoEditorController.cpp  CorpusInfoEditorController.h  CorpusInfoPropertyController.cpp  CorpusInfoPropertyController.h  CorpusMetaInfoController.cpp  CorpusMetaInfoController.h
apps/corpus_editor/main/model/: CorpusEditor.cpp  CorpusEditor.h  CorpusInfoEditor.cpp  CorpusInfoEditor.h
apps/corpus_editor/main/model/commands/: CorpusInfoPropertyChangeCommand.cpp  CorpusInfoPropertyChangeCommand.h  CorpusMetaInfoChangeCmmand.cpp  CorpusMetaInfoChangeCmmand.h  PhonemeDeletionCommand.h  PhonemeInsertionCommand.cpp  PhonemeInsertionCommand.h
apps/corpus_editor/main/model/commands/corpus/info/: CorpusInfoLanguageAdditionCommand.cpp  CorpusInfoLanguageAdditionCommand.h  CorpusInfoLanguageRemovalCommand.cpp  CorpusInfoLanguageRemovalCommand.h  CorpusInfoStringChangeCommand.cpp  CorpusInfoStringChangeCommand.h  CorpusInfoTranslatableChangeCommand.cpp  CorpusInfoTranslatableChangeCommand.h
apps/corpus_editor/main/model/commands/corpus/phoneme/: PhonemeDeletionCommand.cpp  PhonemeInsertionCommand.h
apps/corpus_editor/main/view/: CorpusEditoView.cpp  CorpusEditoView.h  CorpusEditorView.ui  CorpusInfoPropertyView.ui  CorpusMetaInfoView.cpp  CorpusMetaInfoView.h  CorpusMetaInfoView.ui
apps/corpus_editor/test/: CMakeLists.txt  MultipleTest.h
apps/domain/: CMakeLists.txt
apps/domain/main/: CMakeLists.txt
apps/domain/main/entity/: Corpus.cpp  Corpus.h  CorpusInfo.cpp  CorpusInfo.h  EditsCorpusInfo.cpp  EditsCorpusInfo.h  UtauVoicebank.cpp  UtauVoicebank.h
apps/domain/main/repsoitory/: CorpusRepository.h  UtauVoicebankRepository.h
apps/domain/main/repsoitory/impl/: JsonFileCorpusRepository.cpp  JsonFileCorpusRepository.h  UtauFileUtauVoicebankRepository.cpp  UtauFileUtauVoicebankRepository.h
apps/domain/main/service/: UtauVoicebankConvertService.cpp  UtauVoicebankConvertService.h  UtauVoicebankConverterService.cpp
apps/domain/test/: CMakeLists.txt
apps/gui/: CMakeLists.txt
apps/gui/main/: CMakeLists.txt
apps/gui/main/commands/: QComboBoxElementAddCommand.cpp  QComboBoxElementAddCommand.h  QComboBoxSelectChangeCommand.cpp  QComboBoxSelectChangeCommand.h  QLineEditCommand.cpp  QLineEditCommand.h  QTextEditCommand.cpp  QTextEditCommand.h
apps/gui/test/: CMakeLists.txt
corpus/: CMakeLists.txt
corpus/main/: CMakeLists.txt
corpus/main/value/: Corpus.h  CorpusInfoProperty.h  CorpusMetaInfo.h  CorpusProperty.h  Language.h  MusicalContext.h  PhonemeInfoProperty.h  PhonemeMetaInfo.h  PhonemeSet.h  Pronounce.h
corpus/main/value/json/: CorpusInfoPropertyJson.cpp  CorpusInfoPropertyJson.h  CorpusJson.cpp  CorpusJson.h  CorpusMetaInfoJson.cpp  CorpusMetaInfoJson.h  CorpusPropertyJson.cpp  CorpusPropertyJson.h  LanguageJson.cpp  LanguageJson.h  MusicalContextJson.cpp  MusicalContextJson.h  PhonemeInfoPropertyJson.cpp  PhonemeInfoPropertyJson.h  PhonemeMetaInfoJson.cpp  PhonemeMetaInfoJson.h  PronounceJson.cpp  PronounceJson.h
corpus/test/: CMakeLists.txt
dsp/: CMakeLists.txt
dsp/main/: CMakeLists.txt
dsp/main/model/: InstantSignalModel.cpp  InstantSignalModel.h  WorldInstantSignalModel.cpp  WorldInstantSignalModel.h  WorldSignalModel.cpp  WorldSignalModel.h
dsp/main/value/: Contour.cpp  Contour.h  Signal.cpp  Signal.h  SignalBuffer.cpp  SignalBuffer.h  Specgram.cpp  Specgram.h  Spectrum.cpp  Spectrum.h  SpectrumBuffer.cpp  SpectrumBuffer.h
dsp/test/: CMakeLists.txt  MultipleTest.cpp
scores/: CMakeLists.txt
scores/main/: CMakeLists.txt
scores/main/value/: ControlChangeEvent.h  ControlTrack.cpp  ControlTrack.h  Event.h  NoteEvent.h  Track.cpp  Track.h
scores/test/: CMakeLists.txt  test_main.cpp
utau/: CMakeLists.txt
utau/main/: CMakeLists.txt
utau/main/reader/: VoicebankReader.h
utau/main/reader/impl/: FileUtauVoicebankReader.cpp  FileUtauVoicebankReader.h  MetaInfoReader.cpp  MetaInfoReader.h  VoiceAliasLineReader.cpp  VoiceAliasLineReader.h  VoiceAliasesReader.cpp  VoiceAliasesReader.h
utau/main/value/: MetaInfo.h  ToneMap.h  VoiceAlias.h  Voicebank.h
utau/test/: CMakeLists.txt
utau/test/reader/impl/: MetaInfoReaderSpec.h  VoiceAliasLineReaderSpec.h
utau/test/util/: DeviceFactoryMock.cpp  DeviceFactoryMock.h
util/: CMakeLists.txt
util/main/: CMakeLists.txt  Entity.h
util/main/io/: DeviceFactory.cpp  DeviceFactory.h  DeviceJsonReader.h  DeviceJsonWriter.h  DeviceReader.h  DeviceTextReader.cpp  DeviceTextReader.h  DeviceWriter.h  DirectoryEnumerator.cpp  DirectoryEnumerator.h
util/main/json/: Json.h  QHashJson.h  QSetJson.h  QStringJson.h
util/main/util/: Entity.h  Execption.h  Try.h
util/test/: CMakeLists.txt
util/test/util/: TrySpec.h
wave/: CMakeLists.txt
wave/main/: CMakeLists.txt
wave/test/: CMakeLists.txt
